"""User model."""
import enum
import uuid
from datetime import datetime, timezone

from sqlalchemy import DateTime, Enum, String, Boolean, Text
from sqlalchemy.dialects.postgresql import UUID, JSONB
from sqlalchemy.orm import Mapped, mapped_column, relationship

from app.db.base import Base


class UserRole(str, enum.Enum):
    client = "client"
    executor = "executor"
    admin = "admin"
    support = "support"


class ExecutorStatus(str, enum.Enum):
    active = "active"
    blocked = "blocked"


class User(Base):
    __tablename__ = "users"

    id: Mapped[uuid.UUID] = mapped_column(
        UUID(as_uuid=True), primary_key=True, default=uuid.uuid4
    )
    email: Mapped[str] = mapped_column(String(255), unique=True, nullable=False, index=True)
    password_hash: Mapped[str | None] = mapped_column(String(255), nullable=True)
    role: Mapped[str] = mapped_column(
        Enum(UserRole), nullable=False, default=UserRole.client
    )
    name: Mapped[str | None] = mapped_column(String(255), nullable=True)
    phone: Mapped[str | None] = mapped_column(String(50), nullable=True)
    locale: Mapped[str] = mapped_column(String(5), default="ru", nullable=False)
    is_active: Mapped[bool] = mapped_column(Boolean, default=True, nullable=False)
    email_verified_at: Mapped[datetime | None] = mapped_column(DateTime(timezone=True), nullable=True)
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), default=lambda: datetime.now(timezone.utc))
    updated_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True), default=lambda: datetime.now(timezone.utc), onupdate=lambda: datetime.now(timezone.utc)
    )
    photo_url: Mapped[str | None] = mapped_column(String(512), nullable=True)
    executor_status: Mapped[str | None] = mapped_column(Enum(ExecutorStatus), nullable=True)
    executor_invite_code: Mapped[str | None] = mapped_column(String(64), unique=True, nullable=True)

    subscriptions = relationship("Subscription", back_populates="user", foreign_keys="Subscription.user_id")
    executor_visits = relationship("Visit", back_populates="executor", foreign_keys="Visit.executor_id")
    executor_zones = relationship("ExecutorZone", back_populates="executor")
    support_tickets = relationship("SupportTicket", back_populates="user")
